--- a/install/sancho_navigation/share/sancho_navigation/config/nav2_params.yaml
+++ b/install/sancho_navigation/share/sancho_navigation/config/nav2_params.yaml
@@ -12,10 +12,11 @@ amcl:
     global_frame_id: "map"
     min_particles: 500
     max_particles: 2000
+    # Coordenadas coincidentes con simulation.launch.py
     set_initial_pose: true
-    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0}
-    # CORRECCIÓN ERROR C (Lentitud):
-    transform_tolerance: 4.0
+    initial_pose: {x: -2.0, y: -0.5, z: 0.0, yaw: 0.0}
+    # --- TOLERANCIA AUMENTADA PARA VM LENTA ---
+    transform_tolerance: 10.0
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
 
 bt_navigator:
@@ -26,7 +27,6 @@ bt_navigator:
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
-    # CORRECCIÓN ERROR A (Plugins): Lista exacta para Humble
     plugin_lib_names:
     - nav2_compute_path_to_pose_action_bt_node
     - nav2_compute_path_through_poses_action_bt_node
@@ -51,14 +51,15 @@ bt_navigator:
     - nav2_time_expired_condition_bt_node
     - nav2_single_trigger_bt_node
     - nav2_goal_updater_node_bt_node
-    - nav2_recovery_node_bt_node  # <--- VITAL: Recuperamos este plugin
+    - nav2_recovery_node_bt_node
     - nav2_round_robin_node_bt_node
-    # PipelineSequence ELIMINADO porque ya viene integrado
+    - nav2_pipeline_sequence_bt_node 
+    - nav2_remove_passed_goals_action_bt_node # <--- ¡EL NUEVO CULPABLE AÑADIDO!
 
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 5.0 # Bajamos frecuencia para ayudar a la CPU
+    controller_frequency: 5.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
@@ -98,7 +99,8 @@ controller_server:
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
-      transform_tolerance: 4.0
+      # --- TOLERANCIA AUMENTADA ---
+      transform_tolerance: 10.0
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
@@ -118,8 +120,9 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      # Frecuencias bajas para CPU
+      update_frequency: 2.0
+      publish_frequency: 1.0
       global_frame: odom
       robot_base_frame: base_footprint
       use_sim_time: True
@@ -128,7 +131,8 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.105
-      transform_tolerance: 4.0
+      # --- TOLERANCIA AUMENTADA ---
+      transform_tolerance: 10.0
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -156,15 +160,17 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
-      publish_frequency: 1.0
+      # Frecuencias bajas para CPU
+      update_frequency: 0.5
+      publish_frequency: 0.5
       global_frame: map
       robot_base_frame: base_footprint
       use_sim_time: True
       robot_radius: 0.105
       resolution: 0.05
       track_unknown_space: true
-      transform_tolerance: 4.0
+      # --- TOLERANCIA AUMENTADA ---
+      transform_tolerance: 10.0
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
@@ -189,8 +195,8 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: True
-    # CORRECCIÓN ERROR B: Ruta absoluta escrita a fuego
-    yaml_filename: "/home/gonzalo/tfg_ws/src/sancho_navigation/maps/greenhouse_map.yaml"
+    # Ajusta esta ruta si es necesario, pero parece correcta para tu nuevo workspace
+    yaml_filename: "/home/gonzalo/gonzalo_ws/src/sancho_navigation/maps/greenhouse_map.yaml"
 
 planner_server:
   ros__parameters:
