--- a/src/sancho_navigation/maps/greenhouse_map.yaml
+++ b/src/sancho_navigation/maps/greenhouse_map.yaml
@@ -1,4 +1,4 @@
-image: /home/gonzalo/tfg_ws/src/sancho_navigation/maps/greenhouse_map.pgm
+image: greenhouse_map.pgm
 mode: trinary
 resolution: 0.05
 origin: [-3.65, -1.13, 0]
