--- a/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
+++ b/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
@@ -1,200 +1,184 @@
 - name: Fila_1_LadoA_P0
-  x: -1.8
-  y: -0.9
+  x: -1.4
+  y: -0.6
   yaw: 90.0
 - name: Fila_1_LadoA_P1
-  x: -1.2
-  y: -0.9
+  x: -0.9
+  y: -0.6
   yaw: 90.0
 - name: Fila_1_LadoA_P2
-  x: -0.6
-  y: -0.9
+  x: -0.4
+  y: -0.6
   yaw: 90.0
 - name: Fila_1_LadoA_P3
-  x: -0.0
-  y: -0.9
+  x: 0.1
+  y: -0.6
   yaw: 90.0
 - name: Fila_1_LadoA_P4
   x: 0.6
-  y: -0.9
+  y: -0.6
   yaw: 90.0
 - name: Fila_1_LadoA_P5
-  x: 1.2
-  y: -0.9
+  x: 1.1
+  y: -0.6
   yaw: 90.0
-- name: Fila_1_LadoA_P6
-  x: 1.8
-  y: -0.9
-  yaw: 90.0
-- name: Fila_1_Giro_Extremo
-  x: 2.6
-  y: -0.9
+- name: Fila_1_Salida_Ida
+  x: 1.9
+  y: -0.6
   yaw: 0.0
 - name: Fila_1_Entrada_Vuelta
-  x: 2.6
-  y: 0.9
+  x: 1.9
+  y: 0.6
   yaw: 180.0
-- name: Fila_1_LadoB_P0
-  x: 1.8
-  y: 0.9
-  yaw: -90.0
-- name: Fila_1_LadoB_P1
-  x: 1.2
-  y: 0.9
-  yaw: -90.0
-- name: Fila_1_LadoB_P2
-  x: 0.6
-  y: 0.9
-  yaw: -90.0
-- name: Fila_1_LadoB_P3
-  x: 0.0
-  y: 0.9
+- name: Fila_1_LadoB_P5
+  x: 1.1
+  y: 0.6
   yaw: -90.0
 - name: Fila_1_LadoB_P4
-  x: -0.6
-  y: 0.9
+  x: 0.6
+  y: 0.6
   yaw: -90.0
-- name: Fila_1_LadoB_P5
-  x: -1.2
-  y: 0.9
+- name: Fila_1_LadoB_P3
+  x: 0.1
+  y: 0.6
   yaw: -90.0
-- name: Fila_1_LadoB_P6
-  x: -1.8
-  y: 0.9
+- name: Fila_1_LadoB_P2
+  x: -0.4
+  y: 0.6
   yaw: -90.0
-- name: Transicion_Fila1_a_2
-  x: -2.6
-  y: 0.9
-  yaw: 90.0
+- name: Fila_1_LadoB_P1
+  x: -0.9
+  y: 0.6
+  yaw: -90.0
+- name: Fila_1_LadoB_P0
+  x: -1.4
+  y: 0.6
+  yaw: -90.0
+- name: Salida_Fila_1
+  x: -2.2
+  y: 0.6
+  yaw: 180.0
+- name: Inicio_Fila_2
+  x: -2.2
+  y: 1.15
+  yaw: 0.0
 - name: Fila_2_LadoA_P0
-  x: -1.8
-  y: 1.1
+  x: -1.4
+  y: 1.15
   yaw: 90.0
 - name: Fila_2_LadoA_P1
-  x: -1.2
-  y: 1.1
+  x: -0.9
+  y: 1.15
   yaw: 90.0
 - name: Fila_2_LadoA_P2
-  x: -0.6
-  y: 1.1
+  x: -0.4
+  y: 1.15
   yaw: 90.0
 - name: Fila_2_LadoA_P3
-  x: -0.0
-  y: 1.1
+  x: 0.1
+  y: 1.15
   yaw: 90.0
 - name: Fila_2_LadoA_P4
   x: 0.6
-  y: 1.1
+  y: 1.15
   yaw: 90.0
 - name: Fila_2_LadoA_P5
-  x: 1.2
-  y: 1.1
+  x: 1.1
+  y: 1.15
   yaw: 90.0
-- name: Fila_2_LadoA_P6
-  x: 1.8
-  y: 1.1
-  yaw: 90.0
-- name: Fila_2_Giro_Extremo
-  x: 2.6
-  y: 1.1
+- name: Fila_2_Salida_Ida
+  x: 1.9
+  y: 1.15
   yaw: 0.0
 - name: Fila_2_Entrada_Vuelta
-  x: 2.6
-  y: 2.9
+  x: 1.9
+  y: 2.35
   yaw: 180.0
-- name: Fila_2_LadoB_P0
-  x: 1.8
-  y: 2.9
-  yaw: -90.0
-- name: Fila_2_LadoB_P1
-  x: 1.2
-  y: 2.9
-  yaw: -90.0
-- name: Fila_2_LadoB_P2
-  x: 0.6
-  y: 2.9
-  yaw: -90.0
-- name: Fila_2_LadoB_P3
-  x: 0.0
-  y: 2.9
+- name: Fila_2_LadoB_P5
+  x: 1.1
+  y: 2.35
   yaw: -90.0
 - name: Fila_2_LadoB_P4
-  x: -0.6
-  y: 2.9
+  x: 0.6
+  y: 2.35
   yaw: -90.0
-- name: Fila_2_LadoB_P5
-  x: -1.2
-  y: 2.9
+- name: Fila_2_LadoB_P3
+  x: 0.1
+  y: 2.35
   yaw: -90.0
-- name: Fila_2_LadoB_P6
-  x: -1.8
-  y: 2.9
+- name: Fila_2_LadoB_P2
+  x: -0.4
+  y: 2.35
   yaw: -90.0
-- name: Transicion_Fila2_a_3
-  x: -2.6
+- name: Fila_2_LadoB_P1
+  x: -0.9
+  y: 2.35
+  yaw: -90.0
+- name: Fila_2_LadoB_P0
+  x: -1.4
+  y: 2.35
+  yaw: -90.0
+- name: Salida_Fila_2
+  x: -2.2
+  y: 2.35
+  yaw: 180.0
+- name: Inicio_Fila_3
+  x: -2.2
   y: 2.9
-  yaw: 90.0
+  yaw: 0.0
 - name: Fila_3_LadoA_P0
-  x: -1.8
-  y: 3.1
+  x: -1.4
+  y: 2.9
   yaw: 90.0
 - name: Fila_3_LadoA_P1
-  x: -1.2
-  y: 3.1
+  x: -0.9
+  y: 2.9
   yaw: 90.0
 - name: Fila_3_LadoA_P2
-  x: -0.6
-  y: 3.1
+  x: -0.4
+  y: 2.9
   yaw: 90.0
 - name: Fila_3_LadoA_P3
-  x: -0.0
-  y: 3.1
+  x: 0.1
+  y: 2.9
   yaw: 90.0
 - name: Fila_3_LadoA_P4
   x: 0.6
-  y: 3.1
+  y: 2.9
   yaw: 90.0
 - name: Fila_3_LadoA_P5
-  x: 1.2
-  y: 3.1
+  x: 1.1
+  y: 2.9
   yaw: 90.0
-- name: Fila_3_LadoA_P6
-  x: 1.8
-  y: 3.1
-  yaw: 90.0
-- name: Fila_3_Giro_Extremo
-  x: 2.6
-  y: 3.1
+- name: Fila_3_Salida_Ida
+  x: 1.9
+  y: 2.9
   yaw: 0.0
 - name: Fila_3_Entrada_Vuelta
-  x: 2.6
-  y: 4.9
+  x: 1.9
+  y: 4.1
   yaw: 180.0
-- name: Fila_3_LadoB_P0
-  x: 1.8
-  y: 4.9
-  yaw: -90.0
-- name: Fila_3_LadoB_P1
-  x: 1.2
-  y: 4.9
-  yaw: -90.0
-- name: Fila_3_LadoB_P2
-  x: 0.6
-  y: 4.9
-  yaw: -90.0
-- name: Fila_3_LadoB_P3
-  x: 0.0
-  y: 4.9
+- name: Fila_3_LadoB_P5
+  x: 1.1
+  y: 4.1
   yaw: -90.0
 - name: Fila_3_LadoB_P4
-  x: -0.6
-  y: 4.9
+  x: 0.6
+  y: 4.1
   yaw: -90.0
-- name: Fila_3_LadoB_P5
-  x: -1.2
-  y: 4.9
+- name: Fila_3_LadoB_P3
+  x: 0.1
+  y: 4.1
   yaw: -90.0
-- name: Fila_3_LadoB_P6
-  x: -1.8
-  y: 4.9
+- name: Fila_3_LadoB_P2
+  x: -0.4
+  y: 4.1
+  yaw: -90.0
+- name: Fila_3_LadoB_P1
+  x: -0.9
+  y: 4.1
+  yaw: -90.0
+- name: Fila_3_LadoB_P0
+  x: -1.4
+  y: 4.1
   yaw: -90.0
