--- a/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
+++ b/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
@@ -1,184 +1,256 @@
-- name: Fila_1_LadoA_P0
-  x: -1.4
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_LadoA_P1
-  x: -0.9
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_LadoA_P2
-  x: -0.4
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_LadoA_P3
-  x: 0.1
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_LadoA_P4
-  x: 0.6
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_LadoA_P5
-  x: 1.1
-  y: -0.6
-  yaw: 90.0
-- name: Fila_1_Salida_Ida
-  x: 1.9
-  y: -0.6
-  yaw: 0.0
-- name: Fila_1_Entrada_Vuelta
-  x: 1.9
-  y: 0.6
-  yaw: 180.0
-- name: Fila_1_LadoB_P5
-  x: 1.1
-  y: 0.6
-  yaw: -90.0
-- name: Fila_1_LadoB_P4
-  x: 0.6
-  y: 0.6
-  yaw: -90.0
-- name: Fila_1_LadoB_P3
-  x: 0.1
-  y: 0.6
-  yaw: -90.0
-- name: Fila_1_LadoB_P2
-  x: -0.4
-  y: 0.6
-  yaw: -90.0
-- name: Fila_1_LadoB_P1
-  x: -0.9
-  y: 0.6
-  yaw: -90.0
-- name: Fila_1_LadoB_P0
-  x: -1.4
-  y: 0.6
-  yaw: -90.0
-- name: Salida_Fila_1
+- name: Fila1_P0
+  x: -2.75
+  y: 5.82
+  yaw: 6.0
+- name: Fila1_P1
+  x: -2.65
+  y: 4.87
+  yaw: 70.9
+- name: Fila1_P2
   x: -2.2
-  y: 0.6
+  y: 4.72
+  yaw: 70.9
+- name: Fila1_P3
+  x: -1.7
+  y: 4.57
+  yaw: 70.9
+- name: Fila1_P4
+  x: -1.2
+  y: 4.37
+  yaw: 70.9
+- name: Fila1_P5
+  x: -0.7
+  y: 4.22
+  yaw: 70.9
+- name: Fila1_P6
+  x: -0.2
+  y: 4.02
+  yaw: 266.1
+- name: Fila1_P7
+  x: -0.75
+  y: 4.07
+  yaw: 266.1
+- name: Fila1_P8
+  x: -1.3
+  y: 4.12
+  yaw: 266.1
+- name: Fila1_P9
+  x: -1.85
+  y: 4.17
+  yaw: 266.1
+- name: Fila1_P10
+  x: -2.4
+  y: 4.17
+  yaw: -72.6
+- name: Fila1_P11
+  x: -3.2
+  y: 3.92
+  yaw: 5.7
+- name: Fila1_P12
+  x: -3.15
+  y: 3.42
+  yaw: 5.7
+- name: Fila1_P13
+  x: -3.1
+  y: 2.92
+  yaw: 70.4
+- name: Fila1_P14
+  x: -2.55
+  y: 2.72
+  yaw: 70.4
+- name: Fila1_P15
+  x: -2.0
+  y: 2.52
+  yaw: 70.4
+- name: Fila1_P16
+  x: -1.45
+  y: 2.32
+  yaw: 70.4
+- name: Fila1_P17
+  x: -0.85
+  y: 2.12
+  yaw: -88.0
+- name: Fila1_P18
+  x: -1.45
+  y: 2.12
+  yaw: -88.0
+- name: Fila1_P19
+  x: -2.0
+  y: 2.12
+  yaw: -88.0
+- name: Fila1_P20
+  x: -2.55
+  y: 2.07
+  yaw: -88.0
+- name: Fila1_P21
+  x: -3.1
+  y: 2.07
+  yaw: -88.0
+- name: Fila1_P22
+  x: -3.65
+  y: 2.02
+  yaw: 2.9
+- name: Fila1_P23
+  x: -3.65
+  y: 1.52
+  yaw: 2.9
+- name: Fila1_P24
+  x: -3.6
+  y: 1.02
+  yaw: 71.3
+- name: Fila1_P25
+  x: -3.15
+  y: 0.87
+  yaw: 71.3
+- name: Fila1_P26
+  x: -2.65
+  y: 0.72
+  yaw: 71.3
+- name: Fila1_P27
+  x: -2.15
+  y: 0.52
+  yaw: 71.3
+- name: Fila1_P28
+  x: -1.65
+  y: 0.37
+  yaw: 71.3
+- name: Fila1_P29
+  x: -1.15
+  y: 0.22
+  yaw: 71.3
+- name: Fila1_P30
+  x: -0.65
+  y: 0.02
+  yaw: 71.3
+- name: Fila1_P31
+  x: -0.15
+  y: -0.13
+  yaw: 71.3
+- name: Fila1_P32
+  x: 0.35
+  y: -0.28
+  yaw: 71.3
+- name: Fila1_P33
+  x: 0.85
+  y: -0.48
+  yaw: 71.3
+- name: Fila1_P34
+  x: 1.35
+  y: -0.63
+  yaw: 71.3
+- name: Fila1_P35
+  x: 1.85
+  y: -0.83
+  yaw: 95.4
+- name: Fila1_P36
+  x: 2.35
+  y: -0.78
+  yaw: 95.4
+- name: Fila1_P37
+  x: 2.9
+  y: -0.73
+  yaw: 95.4
+- name: Fila1_P38
+  x: 3.45
+  y: -0.68
+  yaw: 169.5
+- name: Fila1_P39
+  x: 3.55
+  y: 0.02
+  yaw: 169.5
+- name: Fila1_P40
+  x: 3.7
+  y: 0.67
+  yaw: 234.8
+- name: Fila1_P41
+  x: 3.25
+  y: 0.97
+  yaw: 234.8
+- name: Fila1_P42
+  x: 2.85
+  y: 1.27
+  yaw: 93.8
+- name: Fila1_P43
+  x: 3.6
+  y: 1.32
+  yaw: 132.0
+- name: Fila1_P44
+  x: 4.1
+  y: 1.77
   yaw: 180.0
-- name: Inicio_Fila_2
+- name: Fila1_P45
+  x: 4.1
+  y: 2.62
+  yaw: 233.1
+- name: Fila1_P46
+  x: 3.7
+  y: 2.92
+  yaw: 233.1
+- name: Fila1_P47
+  x: 3.3
+  y: 3.22
+  yaw: 107.7
+- name: Fila1_P48
+  x: 3.9
+  y: 3.42
+  yaw: 107.7
+- name: Fila1_P49
+  x: 4.55
+  y: 3.62
+  yaw: 194.5
+- name: Fila1_P50
+  x: 4.35
+  y: 4.32
+  yaw: 194.5
+- name: Fila1_P51
+  x: 4.2
+  y: 4.97
+  yaw: 257.8
+- name: Fila1_P52
+  x: 3.65
+  y: 5.12
+  yaw: 257.8
+- name: Fila1_P53
+  x: 3.1
+  y: 5.22
+  yaw: 257.8
+- name: Fila1_P54
+  x: 2.6
+  y: 5.32
+  yaw: 257.8
+- name: Fila1_P55
+  x: 2.05
+  y: 5.47
+  yaw: 257.8
+- name: Fila1_P56
+  x: 1.55
+  y: 5.57
+  yaw: 257.8
+- name: Fila1_P57
+  x: 1.0
+  y: 5.67
+  yaw: 257.8
+- name: Fila1_P58
+  x: 0.45
+  y: 5.82
+  yaw: 257.8
+- name: Fila1_P59
+  x: -0.05
+  y: 5.92
+  yaw: 257.8
+- name: Fila1_P60
+  x: -0.6
+  y: 6.02
+  yaw: 257.8
+- name: Fila1_P61
+  x: -1.1
+  y: 6.12
+  yaw: -79.7
+- name: Fila1_P62
+  x: -1.65
+  y: 6.02
+  yaw: -79.7
+- name: Fila1_P63
   x: -2.2
-  y: 1.15
-  yaw: 0.0
-- name: Fila_2_LadoA_P0
-  x: -1.4
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_LadoA_P1
-  x: -0.9
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_LadoA_P2
-  x: -0.4
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_LadoA_P3
-  x: 0.1
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_LadoA_P4
-  x: 0.6
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_LadoA_P5
-  x: 1.1
-  y: 1.15
-  yaw: 90.0
-- name: Fila_2_Salida_Ida
-  x: 1.9
-  y: 1.15
-  yaw: 0.0
-- name: Fila_2_Entrada_Vuelta
-  x: 1.9
-  y: 2.35
-  yaw: 180.0
-- name: Fila_2_LadoB_P5
-  x: 1.1
-  y: 2.35
-  yaw: -90.0
-- name: Fila_2_LadoB_P4
-  x: 0.6
-  y: 2.35
-  yaw: -90.0
-- name: Fila_2_LadoB_P3
-  x: 0.1
-  y: 2.35
-  yaw: -90.0
-- name: Fila_2_LadoB_P2
-  x: -0.4
-  y: 2.35
-  yaw: -90.0
-- name: Fila_2_LadoB_P1
-  x: -0.9
-  y: 2.35
-  yaw: -90.0
-- name: Fila_2_LadoB_P0
-  x: -1.4
-  y: 2.35
-  yaw: -90.0
-- name: Salida_Fila_2
-  x: -2.2
-  y: 2.35
-  yaw: 180.0
-- name: Inicio_Fila_3
-  x: -2.2
-  y: 2.9
-  yaw: 0.0
-- name: Fila_3_LadoA_P0
-  x: -1.4
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_LadoA_P1
-  x: -0.9
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_LadoA_P2
-  x: -0.4
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_LadoA_P3
-  x: 0.1
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_LadoA_P4
-  x: 0.6
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_LadoA_P5
-  x: 1.1
-  y: 2.9
-  yaw: 90.0
-- name: Fila_3_Salida_Ida
-  x: 1.9
-  y: 2.9
-  yaw: 0.0
-- name: Fila_3_Entrada_Vuelta
-  x: 1.9
-  y: 4.1
-  yaw: 180.0
-- name: Fila_3_LadoB_P5
-  x: 1.1
-  y: 4.1
-  yaw: -90.0
-- name: Fila_3_LadoB_P4
-  x: 0.6
-  y: 4.1
-  yaw: -90.0
-- name: Fila_3_LadoB_P3
-  x: 0.1
-  y: 4.1
-  yaw: -90.0
-- name: Fila_3_LadoB_P2
-  x: -0.4
-  y: 4.1
-  yaw: -90.0
-- name: Fila_3_LadoB_P1
-  x: -0.9
-  y: 4.1
-  yaw: -90.0
-- name: Fila_3_LadoB_P0
-  x: -1.4
-  y: 4.1
-  yaw: -90.0
+  y: 5.92
+  yaw: -79.7
