--- a/src/sancho_navigation/config/my_route.yaml
+++ b/src/sancho_navigation/config/my_route.yaml
@@ -1,256 +1,84 @@
-- name: Fila1_P0
+- name: Punto_0
   x: -2.75
-  y: 5.82
-  yaw: 6.0
-- name: Fila1_P1
-  x: -2.65
-  y: 4.87
-  yaw: 70.9
-- name: Fila1_P2
-  x: -2.2
-  y: 4.72
-  yaw: 70.9
-- name: Fila1_P3
-  x: -1.7
-  y: 4.57
-  yaw: 70.9
-- name: Fila1_P4
-  x: -1.2
-  y: 4.37
-  yaw: 70.9
-- name: Fila1_P5
-  x: -0.7
-  y: 4.22
-  yaw: 70.9
-- name: Fila1_P6
-  x: -0.2
-  y: 4.02
-  yaw: 266.1
-- name: Fila1_P7
-  x: -0.75
-  y: 4.07
-  yaw: 266.1
-- name: Fila1_P8
-  x: -1.3
-  y: 4.12
-  yaw: 266.1
-- name: Fila1_P9
-  x: -1.85
-  y: 4.17
-  yaw: 266.1
-- name: Fila1_P10
-  x: -2.4
-  y: 4.17
-  yaw: -72.6
-- name: Fila1_P11
-  x: -3.2
-  y: 3.92
-  yaw: 5.7
-- name: Fila1_P12
-  x: -3.15
-  y: 3.42
-  yaw: 5.7
-- name: Fila1_P13
-  x: -3.1
-  y: 2.92
-  yaw: 70.4
-- name: Fila1_P14
-  x: -2.55
-  y: 2.72
-  yaw: 70.4
-- name: Fila1_P15
-  x: -2.0
-  y: 2.52
-  yaw: 70.4
-- name: Fila1_P16
-  x: -1.45
-  y: 2.32
-  yaw: 70.4
-- name: Fila1_P17
-  x: -0.85
-  y: 2.12
-  yaw: -88.0
-- name: Fila1_P18
-  x: -1.45
-  y: 2.12
-  yaw: -88.0
-- name: Fila1_P19
-  x: -2.0
-  y: 2.12
-  yaw: -88.0
-- name: Fila1_P20
-  x: -2.55
-  y: 2.07
-  yaw: -88.0
-- name: Fila1_P21
-  x: -3.1
-  y: 2.07
-  yaw: -88.0
-- name: Fila1_P22
+  y: 7.57
+  yaw: -41.877869537884294
+- name: Punto_1
+  x: -1.2999999999999998
+  y: 6.27
+  yaw: -3.7429882956871343
+- name: Punto_2
+  x: 4.05
+  y: 5.92
+  yaw: 66.80140948635182
+- name: Punto_3
+  x: 4.500000000000001
+  y: 6.970000000000001
+  yaw: 168.43986920578223
+- name: Punto_4
+  x: 0.10000000000000053
+  y: 7.870000000000001
+  yaw: -173.92754359279232
+- name: Punto_5
+  x: -2.2499999999999996
+  y: 7.620000000000001
+  yaw: -174.28940686250036
+- name: Punto_6
+  x: -2.75
+  y: 7.57
+  yaw: -100.56101069119639
+- name: Punto_7
+  x: -3.3
+  y: 4.620000000000001
+  yaw: -40.155999624919325
+- name: Punto_8
+  x: -1.6999999999999997
+  y: 3.27
+  yaw: -6.398956627368915
+- name: Punto_9
+  x: 3.6500000000000004
+  y: 2.6700000000000004
+  yaw: 74.9315118405078
+- name: Punto_10
+  x: 4.000000000000001
+  y: 3.97
+  yaw: 169.11447294534128
+- name: Punto_11
+  x: -1.1999999999999997
+  y: 4.970000000000001
+  yaw: -170.53767779197437
+- name: Punto_12
+  x: -3.3
+  y: 4.620000000000001
+  yaw: -96.6544250460066
+- name: Punto_13
   x: -3.65
-  y: 2.02
-  yaw: 2.9
-- name: Fila1_P23
-  x: -3.65
-  y: 1.52
-  yaw: 2.9
-- name: Fila1_P24
-  x: -3.6
-  y: 1.02
-  yaw: 71.3
-- name: Fila1_P25
-  x: -3.15
-  y: 0.87
-  yaw: 71.3
-- name: Fila1_P26
-  x: -2.65
-  y: 0.72
-  yaw: 71.3
-- name: Fila1_P27
+  y: 1.62
+  yaw: -39.80557109226519
+- name: Punto_14
   x: -2.15
-  y: 0.52
-  yaw: 71.3
-- name: Fila1_P28
-  x: -1.65
-  y: 0.37
-  yaw: 71.3
-- name: Fila1_P29
-  x: -1.15
-  y: 0.22
-  yaw: 71.3
-- name: Fila1_P30
-  x: -0.65
-  y: 0.02
-  yaw: 71.3
-- name: Fila1_P31
-  x: -0.15
-  y: -0.13
-  yaw: 71.3
-- name: Fila1_P32
-  x: 0.35
-  y: -0.28
-  yaw: 71.3
-- name: Fila1_P33
-  x: 0.85
-  y: -0.48
-  yaw: 71.3
-- name: Fila1_P34
-  x: 1.35
-  y: -0.63
-  yaw: 71.3
-- name: Fila1_P35
-  x: 1.85
-  y: -0.83
-  yaw: 95.4
-- name: Fila1_P36
-  x: 2.35
-  y: -0.78
-  yaw: 95.4
-- name: Fila1_P37
-  x: 2.9
-  y: -0.73
-  yaw: 95.4
-- name: Fila1_P38
-  x: 3.45
-  y: -0.68
-  yaw: 169.5
-- name: Fila1_P39
-  x: 3.55
-  y: 0.02
-  yaw: 169.5
-- name: Fila1_P40
-  x: 3.7
-  y: 0.67
-  yaw: 234.8
-- name: Fila1_P41
-  x: 3.25
-  y: 0.97
-  yaw: 234.8
-- name: Fila1_P42
-  x: 2.85
-  y: 1.27
-  yaw: 93.8
-- name: Fila1_P43
-  x: 3.6
-  y: 1.32
-  yaw: 132.0
-- name: Fila1_P44
-  x: 4.1
-  y: 1.77
-  yaw: 180.0
-- name: Fila1_P45
-  x: 4.1
-  y: 2.62
-  yaw: 233.1
-- name: Fila1_P46
-  x: 3.7
-  y: 2.92
-  yaw: 233.1
-- name: Fila1_P47
-  x: 3.3
-  y: 3.22
-  yaw: 107.7
-- name: Fila1_P48
-  x: 3.9
-  y: 3.42
-  yaw: 107.7
-- name: Fila1_P49
-  x: 4.55
-  y: 3.62
-  yaw: 194.5
-- name: Fila1_P50
-  x: 4.35
-  y: 4.32
-  yaw: 194.5
-- name: Fila1_P51
-  x: 4.2
-  y: 4.97
-  yaw: 257.8
-- name: Fila1_P52
-  x: 3.65
-  y: 5.12
-  yaw: 257.8
-- name: Fila1_P53
-  x: 3.1
-  y: 5.22
-  yaw: 257.8
-- name: Fila1_P54
-  x: 2.6
-  y: 5.32
-  yaw: 257.8
-- name: Fila1_P55
-  x: 2.05
-  y: 5.47
-  yaw: 257.8
-- name: Fila1_P56
-  x: 1.55
-  y: 5.57
-  yaw: 257.8
-- name: Fila1_P57
-  x: 1.0
-  y: 5.67
-  yaw: 257.8
-- name: Fila1_P58
-  x: 0.45
-  y: 5.82
-  yaw: 257.8
-- name: Fila1_P59
-  x: -0.05
-  y: 5.92
-  yaw: 257.8
-- name: Fila1_P60
-  x: -0.6
-  y: 6.02
-  yaw: 257.8
-- name: Fila1_P61
-  x: -1.1
-  y: 6.12
-  yaw: -79.7
-- name: Fila1_P62
-  x: -1.65
-  y: 6.02
-  yaw: -79.7
-- name: Fila1_P63
-  x: -2.2
-  y: 5.92
-  yaw: -79.7
+  y: 0.3700000000000001
+  yaw: -10.06068979532297
+- name: Punto_15
+  x: 0.9500000000000002
+  y: -0.17999999999999972
+  yaw: -1.273030020056711
+- name: Punto_16
+  x: 3.2
+  y: -0.22999999999999998
+  yaw: 91.73570458892839
+- name: Punto_17
+  x: 3.1500000000000004
+  y: 1.4200000000000004
+  yaw: 175.0062560141766
+- name: Punto_18
+  x: -1.9999999999999996
+  y: 1.8700000000000006
+  yaw: -170.13419305691565
+- name: Punto_19
+  x: -3.1499999999999995
+  y: 1.6700000000000004
+  yaw: -174.28940686250036
+- name: Punto_20
+  x: -3.65
+  y: 1.62
+  yaw: 0.0
