--- a/src/sancho_navigation/config/nav2_params.yaml
+++ b/src/sancho_navigation/config/nav2_params.yaml
@@ -12,11 +12,10 @@ amcl:
     global_frame_id: "map"
     min_particles: 500
     max_particles: 2000
-    # Coordenadas coincidentes con simulation.launch.py
     set_initial_pose: true
-    initial_pose: {x: -2.0, y: -0.5, z: 0.0, yaw: 0.0}
-    # --- TOLERANCIA AUMENTADA PARA VM LENTA ---
-    transform_tolerance: 10.0
+    initial_pose: {x: -2.0, y: -0.5, z: 0.0, yaw: 0.0} # Coincide con tu spawn
+    # --- TOLERANCIA OPTIMIZADA (Sincronización real) ---
+    transform_tolerance: 0.2 # Reducido de 10.0
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
 
 bt_navigator:
@@ -54,14 +53,14 @@ bt_navigator:
     - nav2_recovery_node_bt_node
     - nav2_round_robin_node_bt_node
     - nav2_pipeline_sequence_bt_node 
-    - nav2_remove_passed_goals_action_bt_node # <--- ¡EL NUEVO CULPABLE AÑADIDO!
+    - nav2_remove_passed_goals_action_bt_node
 
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 5.0
+    controller_frequency: 20.0 # Subido de 5.0 para mayor fluidez en Dual Boot
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.0 # Corregido: robot diferencial
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
@@ -99,8 +98,7 @@ controller_server:
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
-      # --- TOLERANCIA AUMENTADA ---
-      transform_tolerance: 10.0
+      transform_tolerance: 0.2 # Ajustado para Dual Boot
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
@@ -120,9 +118,8 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      # Frecuencias bajas para CPU
-      update_frequency: 2.0
-      publish_frequency: 1.0
+      update_frequency: 5.0 # Subido para respuesta rápida
+      publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: base_footprint
       use_sim_time: True
@@ -131,8 +128,7 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.105
-      # --- TOLERANCIA AUMENTADA ---
-      transform_tolerance: 10.0
+      transform_tolerance: 0.2 # Ajustado
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -160,17 +156,15 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      # Frecuencias bajas para CPU
-      update_frequency: 0.5
-      publish_frequency: 0.5
+      update_frequency: 1.0
+      publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_footprint
       use_sim_time: True
       robot_radius: 0.105
       resolution: 0.05
       track_unknown_space: true
-      # --- TOLERANCIA AUMENTADA ---
-      transform_tolerance: 10.0
+      transform_tolerance: 0.2 # Ajustado
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
@@ -195,7 +189,6 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: True
-    # Ajusta esta ruta si es necesario, pero parece correcta para tu nuevo workspace
     yaml_filename: "/home/gonzalo/gonzalo_ws/src/sancho_navigation/maps/greenhouse_map.yaml"
 
 planner_server:
