arreglos finales mal

--- a/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
+++ b/install/sancho_navigation/share/sancho_navigation/config/my_route.yaml
@@ -1,400 +1,146 @@
-- name: P_0
-  x: -4.85
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_1
-  x: -3.8499999999999996
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_2
-  x: -2.8499999999999996
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_3
-  x: -1.8499999999999996
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_4
-  x: -0.8499999999999996
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_5
-  x: 0.15000000000000036
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_6
-  x: 1.1500000000000004
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_7
-  x: 2.1500000000000004
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_8
-  x: 3.1500000000000004
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_9
-  x: 4.150000000000001
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_10
-  x: 4.7
-  y: 0.27
-  yaw: 0.0
-- name: P_11
-  x: 3.7
-  y: 0.27
-  yaw: 0.0
-- name: P_12
-  x: 2.7
-  y: 0.27
-  yaw: 0.0
-- name: P_13
-  x: 1.7000000000000002
-  y: 0.27
-  yaw: 0.0
-- name: P_14
-  x: 0.7000000000000002
-  y: 0.27
-  yaw: 0.0
-- name: P_15
-  x: -0.2999999999999998
-  y: 0.27
-  yaw: 0.0
-- name: P_16
-  x: -1.2999999999999998
-  y: 0.27
-  yaw: 0.0
-- name: P_17
-  x: -2.3
-  y: 0.27
-  yaw: 0.0
-- name: P_18
-  x: -3.3
-  y: 0.27
-  yaw: 0.0
-- name: P_19
-  x: -4.3
-  y: 0.27
-  yaw: 0.0
-- name: P_20
-  x: 3.45
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_21
-  x: 4.45
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_22
-  x: 5.45
-  y: -2.7800000000000002
-  yaw: 0.0
-- name: P_23
-  x: 5.7
-  y: 0.9700000000000002
-  yaw: 0.0
-- name: P_24
-  x: 4.7
-  y: 0.9700000000000002
-  yaw: 0.0
-- name: P_25
-  x: 3.7
-  y: 0.9700000000000002
-  yaw: 0.0
-- name: P_26
-  x: -3.8499999999999996
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_27
-  x: -2.8499999999999996
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_28
-  x: -1.8499999999999996
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_29
-  x: -0.8499999999999996
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_30
-  x: 0.15000000000000036
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_31
-  x: 1.1500000000000004
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_32
-  x: 2.1500000000000004
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_33
-  x: 3.1500000000000004
-  y: -0.6799999999999999
-  yaw: 0.0
-- name: P_34
-  x: 3.6500000000000004
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_35
-  x: 2.6500000000000004
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_36
-  x: 1.6500000000000004
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_37
-  x: 0.6500000000000004
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_38
-  x: -0.34999999999999964
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_39
-  x: -1.3499999999999996
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_40
-  x: -2.3499999999999996
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_41
-  x: -3.3499999999999996
-  y: 2.1700000000000004
-  yaw: 0.0
-- name: P_42
-  x: -3.5
-  y: 2.22
-  yaw: 0.0
-- name: P_43
-  x: -2.5
-  y: 2.22
-  yaw: 0.0
-- name: P_44
-  x: -1.4999999999999996
-  y: 2.22
-  yaw: 0.0
-- name: P_45
-  x: -0.49999999999999956
-  y: 2.22
-  yaw: 0.0
-- name: P_46
-  x: 0.5000000000000009
-  y: 2.22
-  yaw: 0.0
-- name: P_47
-  x: 1.5000000000000009
-  y: 2.22
-  yaw: 0.0
-- name: P_48
-  x: 2.500000000000001
-  y: 2.22
-  yaw: 0.0
-- name: P_49
-  x: 3.500000000000001
-  y: 2.22
-  yaw: 0.0
-- name: P_50
-  x: 4.3
-  y: 5.17
-  yaw: 0.0
-- name: P_51
-  x: 3.3000000000000007
-  y: 5.17
-  yaw: 0.0
-- name: P_52
-  x: 2.3000000000000007
-  y: 5.17
-  yaw: 0.0
-- name: P_53
-  x: 1.3000000000000007
-  y: 5.17
-  yaw: 0.0
-- name: P_54
-  x: 0.3000000000000007
-  y: 5.17
-  yaw: 0.0
-- name: P_55
-  x: -0.6999999999999997
-  y: 5.17
-  yaw: 0.0
-- name: P_56
-  x: -1.6999999999999997
-  y: 5.17
-  yaw: 0.0
-- name: P_57
-  x: -2.6999999999999997
-  y: 5.17
-  yaw: 0.0
-- name: P_58
-  x: -2.9499999999999997
-  y: 5.42
-  yaw: 0.0
-- name: P_59
-  x: -1.9499999999999997
-  y: 5.42
-  yaw: 0.0
-- name: P_60
-  x: -0.9499999999999997
-  y: 5.42
-  yaw: 0.0
-- name: P_61
-  x: 0.05000000000000071
-  y: 5.42
-  yaw: 0.0
-- name: P_62
-  x: 1.0500000000000007
-  y: 5.42
-  yaw: 0.0
-- name: P_63
-  x: 2.0500000000000007
-  y: 5.42
-  yaw: 0.0
-- name: P_64
-  x: 3.0500000000000007
-  y: 5.42
-  yaw: 0.0
-- name: P_65
-  x: 4.05
-  y: 5.42
-  yaw: 0.0
-- name: P_66
-  x: 4.6000000000000005
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_67
-  x: 3.6000000000000005
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_68
-  x: 2.6000000000000005
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_69
-  x: 1.6000000000000005
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_70
-  x: 0.6000000000000005
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_71
-  x: -0.39999999999999947
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_72
-  x: -1.3999999999999995
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_73
-  x: -2.3999999999999995
-  y: 8.120000000000001
-  yaw: 0.0
-- name: P_74
-  x: -1.6499999999999995
-  y: 7.57
-  yaw: 0.0
-- name: P_75
-  x: -0.6499999999999995
-  y: 7.57
-  yaw: 0.0
-- name: P_76
-  x: 0.35000000000000053
-  y: 7.57
-  yaw: 0.0
-- name: P_77
-  x: 1.3500000000000005
-  y: 7.57
-  yaw: 0.0
-- name: P_78
-  x: 2.3500000000000005
-  y: 7.57
-  yaw: 0.0
-- name: P_79
-  x: 3.3500000000000005
-  y: 7.57
-  yaw: 0.0
-- name: P_80
-  x: 4.3500000000000005
-  y: 7.57
-  yaw: 0.0
-- name: P_81
-  x: 5.3500000000000005
-  y: 7.57
-  yaw: 0.0
-- name: P_82
-  x: 5.7
-  y: 10.22
-  yaw: 0.0
-- name: P_83
-  x: 4.7
-  y: 10.22
-  yaw: 0.0
-- name: P_84
-  x: 3.7
-  y: 10.22
-  yaw: 0.0
-- name: P_85
-  x: 2.7
-  y: 10.22
-  yaw: 0.0
-- name: P_86
-  x: 1.7000000000000002
-  y: 10.22
-  yaw: 0.0
-- name: P_87
-  x: 0.7000000000000002
-  y: 10.22
-  yaw: 0.0
-- name: P_88
-  x: -0.2999999999999998
-  y: 10.22
-  yaw: 0.0
-- name: P_89
-  x: -1.2999999999999998
-  y: 10.22
-  yaw: 0.0
-- name: P_90
-  x: -4.85
-  y: 3.1200000000000006
-  yaw: 0.0
-- name: P_91
-  x: -3.8499999999999996
-  y: 3.1200000000000006
-  yaw: 0.0
-- name: P_92
-  x: -2.8499999999999996
-  y: 3.1200000000000006
-  yaw: 0.0
-- name: P_93
-  x: -1.8499999999999996
-  y: 3.1200000000000006
-  yaw: 0.0
-- name: P_94
-  x: -0.8499999999999996
-  y: 3.1200000000000006
-  yaw: 0.0
-- name: P_95
-  x: -0.6499999999999995
-  y: 10.22
-  yaw: 0.0
-- name: P_96
-  x: -1.6499999999999995
-  y: 10.22
-  yaw: 0.0
-- name: P_97
-  x: -2.6499999999999995
-  y: 10.22
-  yaw: 0.0
-- name: P_98
-  x: -3.65
-  y: 10.22
-  yaw: 0.0
-- name: P_99
-  x: -4.6499999999999995
-  y: 10.22
-  yaw: 0.0
+# Ruta Generada Automáticamente
+poses:
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -4.3300
+        y: -0.7820
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 3.9200
+        y: -0.7820
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 3.9200
+        y: 2.4680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -4.3300
+        y: 2.4680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -3.6800
+        y: 2.2680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 4.9200
+        y: 2.2680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 4.9200
+        y: 5.4680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -3.6800
+        y: 5.4680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -3.0300
+        y: 5.3180
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 5.5200
+        y: 5.3180
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 0.0000
+        w: 1.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: 5.5200
+        y: 8.2680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
+  - header:
+      frame_id: map
+    pose:
+      position:
+        x: -3.0300
+        y: 8.2680
+        z: 0.0
+      orientation:
+        x: 0.0000
+        y: 0.0000
+        z: 1.0000
+        w: 0.0000
