--- a/src/sancho_navigation/config/nav2_params_real.yaml
+++ b/src/sancho_navigation/config/nav2_params_real.yaml
@@ -8,14 +8,13 @@ amcl:
     alpha5: 0.2
     base_frame_id: "base_footprint"
     odom_frame_id: "odom"
-    scan_topic: "/scan_1st" # <--- OJO: Coincide con tu robot real
+    scan_topic: "scan"
     global_frame_id: "map"
     min_particles: 500
     max_particles: 2000
     set_initial_pose: true
-    # Ajusta esto a donde pongas el robot REAL al encenderlo
-    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0} 
-    transform_tolerance: 0.2
+    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0} # Ajusta esto a donde inicie tu robot real
+    transform_tolerance: 1.0
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
 
 bt_navigator:
@@ -54,6 +53,31 @@ bt_navigator:
     - nav2_round_robin_node_bt_node
     - nav2_pipeline_sequence_bt_node 
     - nav2_remove_passed_goals_action_bt_node
+
+behavior_server:
+  ros__parameters:
+    costmap_topic: local_costmap/costmap_raw
+    footprint_topic: local_costmap/published_footprint
+    cycle_frequency: 10.0
+    behavior_plugins: ["spin", "backup", "wait", "drive_on_heading", "assisted_teleop"]
+    spin:
+      plugin: "nav2_behaviors/Spin"
+    backup:
+      plugin: "nav2_behaviors/BackUp"
+    wait:
+      plugin: "nav2_behaviors/Wait"
+    drive_on_heading:
+      plugin: "nav2_behaviors/DriveOnHeading"
+    assisted_teleop:
+      plugin: "nav2_behaviors/AssistedTeleop"
+    global_frame: odom
+    robot_base_frame: base_footprint
+    transform_tolerance: 0.1
+    use_sim_time: false
+    simulate_ahead_time: 2.0
+    max_rotational_vel: 1.0
+    min_rotational_vel: 0.4
+    rotational_acc_lim: 3.2
 
 controller_server:
   ros__parameters:
@@ -145,7 +169,7 @@ local_costmap:
         mark_threshold: 0
         observation_sources: scan
         scan:
-          topic: /scan_1st # <--- CAMBIADO
+          topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -171,7 +195,7 @@ global_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan_1st # <--- CAMBIADO
+          topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -201,8 +225,32 @@ planner_server:
       use_astar: false
       allow_unknown: true
 
+waypoint_follower:
+  ros__parameters:
+    use_sim_time: false
+    loop_rate: 20
+    stop_on_failure: false
+    waypoint_task_executor_plugin: "wait_at_waypoint"
+    wait_at_waypoint:
+      plugin: "nav2_waypoint_follower::WaitAtWaypoint"
+      enabled: True
+      waypoint_pause_duration: 200
+
+velocity_smoother:
+  ros__parameters:
+    use_sim_time: false
+    smoothing_frequency: 20.0
+    scale_velocities: False
+    feedback: "OPEN_LOOP"
+    max_velocity: [0.22, 0.0, 1.0]
+    min_velocity: [-0.22, 0.0, -1.0]
+    max_accel: [2.5, 0.0, 3.2]
+    max_decel: [-2.5, 0.0, -3.2]
+    odom_topic: "odom"
+    robot_base_frame: "base_footprint"
+
 lifecycle_manager:
   ros__parameters:
     use_sim_time: false
     autostart: true
-    node_names: ['map_server', 'amcl', 'controller_server', 'planner_server', 'bt_navigator', 'behavior_server', 'waypoint_follower']
+    node_names: ['map_server', 'amcl', 'controller_server', 'planner_server', 'bt_navigator', 'behavior_server', 'waypoint_follower', 'velocity_smoother']
